# OpenLearn

./: .gitignore  README.md  pyproject.toml  wsgi.py
OpenLearn/: __init__.py  app.py  commands.py  database.py  extensions.py  settings.py
OpenLearn/static/css/: noscript.css
OpenLearn/templates/: layout.html
OpenLearn/templates/public/: index.html  login.html  register.html  sign-in.html
OpenLearn/templates/student/: join.html
OpenLearn/templates/teacher/: create.html  dashboard.html
OpenLearn/views/: __init__.py
OpenLearn/views/public/: __init__.py  controller.py  forms.py
OpenLearn/views/student/: __init__.py  controller.py  forms.py
OpenLearn/views/teacher/: __init__.py  controller.py  forms.py
tests/: test_app.py  test_utilities.py  test_views.py
