[tool.poetry]
name = "openlearn"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Jackson Chadfield <chadfield.jackson@gmail.com>"]
repository = "https://github.com/j-chad/OpenLearn.git"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-sqlalchemy = "^2.4"
flask-paranoid = "^0.2.0"
flask-wtf = "^0.14.2"
flask-talisman = "^0.7.0"
flask-bcrypt = "^0.7.1"
psycopg2 = "^2.8"
flask-login = "^0.4.1"

[tool.poetry.dev-dependencies]
flask-debugtoolbar = "^0.10.1"
flask-testing = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
